# contest_trainer

./: Cargo.toml  LICENSE  PLAN_2BSIQ.md  PLAN_2BSIQ_v2.md  PLAN_STATE_MACHINE_REFACTOR.md  README.md  arrldx_callsigns.txt  build.rs  callsigns.txt  cwt_callsigns.txt  docs.md  ss_callsigns.txt
.github/workflows/: deps-daily-lockfile.yml  deps-daily-toml-upgrade.yml  release.yml
docs/: ADDING_CONTESTS.md  STATE_MACHINE.md  user-guide.md
src/: app.rs  config.rs  cty.rs  export.rs  main.rs  messages.rs  state.rs  stats.rs
src/audio/: engine.rs  mixer.rs  mod.rs  morse.rs  noise.rs
src/contest/: arrldx.rs  callsign.rs  cqwpx.rs  cqww.rs  cwt.rs  mod.rs  sprint.rs  sweepstakes.rs  types.rs
src/station/: caller_manager.rs  callsign.rs  mod.rs  spawner.rs
src/ui/: export_dialog.rs  main_panel.rs  mod.rs  settings_panel.rs  stats_window.rs
