[package]
name = "contest_trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"
egui-file-dialog = "0.12"
cpal = "0.15"
crossbeam-channel = "0.5"
dirs = "5"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
